[tool.poetry]
name = "did-you-knows"
version = "0.1.0"
description = ""
authors = ["Daniel Erenrich <daniel@erenrich.net>"]
readme = "README.md"
packages = [{ include = "did_you_knows" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
