[tool.poetry]
name = "did-you-knows"
version = "0.1.0"
description = ""
authors = ["Daniel Erenrich <daniel@erenrich.net>"]
readme = "README.md"
packages = [{ include = "did_you_knows" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
pymysql = "^1.1.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"
